--- a/resolucion_ejercicios_deber12.ipynb
+++ b/resolucion_ejercicios_deber12.ipynb
@@ -2,8 +2,568 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1765a2c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Función general del método de Euler\n",
+    "def euler(f, t0, y0, h, t_final):\n",
+    "    t_values = [round(t0, 2)]\n",
+    "    y_values = [round(y0, 4)]\n",
+    "    while t0 < t_final:\n",
+    "        y0 = y0 + h * f(t0, y0)\n",
+    "        t0 = round(t0 + h, 2)\n",
+    "        t_values.append(t0)\n",
+    "        y_values.append(round(y0, 4))\n",
+    "    return t_values, y_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4008a72f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 1c - Método de Euler (h = 0.25)\n",
+      "t,y\n",
+      "1.0,2.0\n",
+      "1.25,2.5\n",
+      "1.5,3.0558\n",
+      "1.75,3.6664\n",
+      "2.0,4.3301\n",
+      "\n",
+      "Ejercicio 1d - Método de Euler (h = 0.25)\n",
+      "t,y\n",
+      "0.0,1.0\n",
+      "0.25,1.5\n",
+      "0.5,2.45\n",
+      "0.75,3.4683\n",
+      "1.0,4.0872\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 1c\n",
+    "print(\"Ejercicio 1c - Método de Euler (h = 0.25)\")\n",
+    "f1c = lambda t, y: np.log(t) + y/t\n",
+    "t1c, y1c = euler(f1c, 1.0, 2.0, 0.25, 2.0)\n",
+    "print(\"t,y\")\n",
+    "for t, y in zip(t1c, y1c):\n",
+    "    print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 1d\n",
+    "print(\"\\nEjercicio 1d - Método de Euler (h = 0.25)\")\n",
+    "f1d = lambda t, y: 2*np.cos(2*t) + 3*np.sin(3*t)\n",
+    "t1d, y1d = euler(f1d, 0.0, 1.0, 0.25, 1.0)\n",
+    "print(\"t,y\")\n",
+    "for t, y in zip(t1d, y1d):\n",
+    "    print(f\"{t},{y}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "94ead4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 2a - Comparación con solución exacta\n",
+      "t,y_euler,y_exact,error\n",
+      "1.0,2.0,2.0,0.0\n",
+      "1.25,2.5,2.7789,0.2789\n",
+      "1.5,3.0558,3.6082,0.5524\n",
+      "1.75,3.6664,4.4793,0.8129\n",
+      "2.0,4.3301,5.3863,1.0562\n",
+      "\n",
+      "Ejercicio 2b - Comparación con solución exacta\n",
+      "t,y_euler,y_exact,error\n",
+      "0.0,1.0,1.0,0.0\n",
+      "0.25,1.5,1.7477,0.2477\n",
+      "0.5,2.45,2.7707,0.3207\n",
+      "0.75,3.4683,3.6257,0.1574\n",
+      "1.0,4.0872,3.8993,0.1879\n",
+      "\n",
+      "Ejercicio 2c - Comparación con solución exacta\n",
+      "t,y_euler,y_exact,error\n",
+      "1.0,1.0,1.0,0.0\n",
+      "1.1,1.0,1.0043,0.0043\n",
+      "1.2,1.0083,1.015,0.0067\n",
+      "1.3,1.0217,1.0298,0.0081\n",
+      "1.4,1.0385,1.0475,0.009\n",
+      "1.5,1.0577,1.0673,0.0096\n",
+      "1.6,1.0785,1.0884,0.0099\n",
+      "1.7,1.1004,1.1107,0.0103\n",
+      "1.8,1.1233,1.1337,0.0104\n",
+      "1.9,1.1467,1.1572,0.0105\n",
+      "2.0,1.1707,1.1812,0.0105\n",
+      "\n",
+      "Ejercicio 2d - Comparación con solución exacta\n",
+      "t,y_euler,y_exact,error\n",
+      "0.0,0.3333,0.3333,0.0\n",
+      "0.1,0.1667,0.2122,0.0455\n",
+      "0.2,0.1083,0.1626,0.0543\n",
+      "0.3,0.1142,0.1644,0.0502\n",
+      "0.4,0.1621,0.2051,0.043\n",
+      "0.5,0.241,0.2774,0.0364\n",
+      "0.6,0.3455,0.3766,0.0311\n",
+      "0.7,0.4728,0.5001,0.0273\n",
+      "0.8,0.6214,0.6461,0.0247\n",
+      "0.9,0.7907,0.8137,0.023\n",
+      "1.0,0.9803,1.0022,0.0219\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 2a\n",
+    "print(\"Ejercicio 2a - Comparación con solución exacta\")\n",
+    "f2a = lambda t, y: np.log(t) + y/t\n",
+    "y_exact_2a = lambda t: t * (np.log(t) + 2)\n",
+    "t2a, y2a = euler(f2a, 1.0, 2.0, 0.25, 2.0)\n",
+    "print(\"t,y_euler,y_exact,error\")\n",
+    "for t, y in zip(t2a, y2a):\n",
+    "    y_ex = y_exact_2a(t)\n",
+    "    error = abs(y - y_ex)\n",
+    "    print(f\"{t},{y},{round(y_ex,4)},{round(error,4)}\")\n",
+    "\n",
+    "# Ejercicio 2b\n",
+    "print(\"\\nEjercicio 2b - Comparación con solución exacta\")\n",
+    "f2b = lambda t, y: 2*np.cos(2*t) + 3*np.sin(3*t)\n",
+    "y_exact_2b = lambda t: np.sin(2*t) - np.cos(3*t) + 2\n",
+    "t2b, y2b = euler(f2b, 0.0, 1.0, 0.25, 1.0)\n",
+    "print(\"t,y_euler,y_exact,error\")\n",
+    "for t, y in zip(t2b, y2b):\n",
+    "    y_ex = y_exact_2b(t)\n",
+    "    error = abs(y - y_ex)\n",
+    "    print(f\"{t},{y},{round(y_ex,4)},{round(error,4)}\")\n",
+    "\n",
+    "# Ejercicio 2c\n",
+    "print(\"\\nEjercicio 2c - Comparación con solución exacta\")\n",
+    "f2c = lambda t, y: y/t - (y/t)**2\n",
+    "y_exact_2c = lambda t: t / (1 + np.log(t))\n",
+    "t2c, y2c = euler(f2c, 1.0, 1.0, 0.1, 2.0)\n",
+    "print(\"t,y_euler,y_exact,error\")\n",
+    "for t, y in zip(t2c, y2c):\n",
+    "    y_ex = y_exact_2c(t)\n",
+    "    error = abs(y - y_ex)\n",
+    "    print(f\"{t},{y},{round(y_ex,4)},{round(error,4)}\")\n",
+    "\n",
+    "# Ejercicio 2d\n",
+    "print(\"\\nEjercicio 2d - Comparación con solución exacta\")\n",
+    "f2d = lambda t, y: -5*y + 5*t**2 + 2*t\n",
+    "y_exact_2d = lambda t: t**2 + (1/3)*np.exp(-5*t)\n",
+    "t2d, y2d = euler(f2d, 0.0, 1/3, 0.1, 1.0)\n",
+    "print(\"t,y_euler,y_exact,error\")\n",
+    "for t, y in zip(t2d, y2d):\n",
+    "    y_ex = y_exact_2d(t)\n",
+    "    error = abs(y - y_ex)\n",
+    "    print(f\"{t},{y},{round(y_ex,4)},{round(error,4)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "00e38217",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 3a - y' = y/t - (y/t)^2\n",
+      "1.0,1.0\n",
+      "1.1,1.0\n",
+      "1.2,1.0083\n",
+      "1.3,1.0217\n",
+      "1.4,1.0385\n",
+      "1.5,1.0577\n",
+      "1.6,1.0785\n",
+      "1.7,1.1004\n",
+      "1.8,1.1233\n",
+      "1.9,1.1467\n",
+      "2.0,1.1707\n",
+      "\n",
+      "Ejercicio 3b - y' = 1 + y/t + (y/t)^2\n",
+      "1.0,0.0\n",
+      "1.2,0.2\n",
+      "1.4,0.4389\n",
+      "1.6,0.7212\n",
+      "1.8,1.052\n",
+      "2.0,1.4373\n",
+      "2.2,1.8843\n",
+      "2.4,2.4023\n",
+      "2.6,3.0028\n",
+      "2.8,3.7006\n",
+      "3.0,4.5143\n",
+      "\n",
+      "Ejercicio 3c - y' = -(y + 1)(y + 3)\n",
+      "0.0,-2.0\n",
+      "0.2,-1.8\n",
+      "0.4,-1.608\n",
+      "0.6,-1.4387\n",
+      "0.8,-1.3017\n",
+      "1.0,-1.1993\n",
+      "1.2,-1.1275\n",
+      "1.4,-1.0797\n",
+      "1.6,-1.0491\n",
+      "1.8,-1.03\n",
+      "2.0,-1.0182\n",
+      "\n",
+      "Ejercicio 3d - y' = -5y + 5t² + 2t\n",
+      "0.0,0.3333\n",
+      "0.1,0.1667\n",
+      "0.2,0.1083\n",
+      "0.3,0.1142\n",
+      "0.4,0.1621\n",
+      "0.5,0.241\n",
+      "0.6,0.3455\n",
+      "0.7,0.4728\n",
+      "0.8,0.6214\n",
+      "0.9,0.7907\n",
+      "1.0,0.9803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejercicio 3a\n",
+    "print(\"Ejercicio 3a - y' = y/t - (y/t)^2\")\n",
+    "f3a = lambda t, y: y/t - (y/t)**2\n",
+    "t3a, y3a = euler(f3a, 1.0, 1.0, 0.1, 2.0)\n",
+    "for t, y in zip(t3a, y3a):\n",
+    "    print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 3b\n",
+    "print(\"\\nEjercicio 3b - y' = 1 + y/t + (y/t)^2\")\n",
+    "f3b = lambda t, y: 1 + y/t + (y/t)**2\n",
+    "t3b, y3b = euler(f3b, 1.0, 0.0, 0.2, 3.0)\n",
+    "for t, y in zip(t3b, y3b):\n",
+    "    print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 3c\n",
+    "print(\"\\nEjercicio 3c - y' = -(y + 1)(y + 3)\")\n",
+    "f3c = lambda t, y: -(y + 1)*(y + 3)\n",
+    "t3c, y3c = euler(f3c, 0.0, -2.0, 0.2, 2.0)\n",
+    "for t, y in zip(t3c, y3c):\n",
+    "    print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 3d\n",
+    "print(\"\\nEjercicio 3d - y' = -5y + 5t² + 2t\")\n",
+    "f3d = lambda t, y: -5*y + 5*t**2 + 2*t\n",
+    "t3d, y3d = euler(f3d, 0.0, 1/3, 0.1, 1.0)\n",
+    "for t, y in zip(t3d, y3d):\n",
+    "    print(f\"{t},{y}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5d41da1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 4d - Comparación exacta vs Euler (desde 3d)\n",
+      "0.0,0.3333,0.3333,0.0\n",
+      "0.1,0.1667,0.2122,0.0455\n",
+      "0.2,0.1083,0.1626,0.0543\n",
+      "0.3,0.1142,0.1644,0.0502\n",
+      "0.4,0.1621,0.2051,0.043\n",
+      "0.5,0.241,0.2774,0.0364\n",
+      "0.6,0.3455,0.3766,0.0311\n",
+      "0.7,0.4728,0.5001,0.0273\n",
+      "0.8,0.6214,0.6461,0.0247\n",
+      "0.9,0.7907,0.8137,0.023\n",
+      "1.0,0.9803,1.0022,0.0219\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Ejercicio 4d - Comparación exacta vs Euler (desde 3d)\")\n",
+    "y_exact_4d = lambda t: t**2 + (1/3)*np.exp(-5*t)\n",
+    "for t, y in zip(t3d, y3d):\n",
+    "    y_ex = y_exact_4d(t)\n",
+    "    error = abs(y - y_ex)\n",
+    "    print(f\"{t},{y},{round(y_ex,4)},{round(error,4)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "025d8a09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 5a - Interpolación usando resultados del 3c\n",
+      "y(0.25) ≈ -1.752\n",
+      "y(0.93) ≈ -1.1526\n",
+      "\n",
+      "Ejercicio 5b - Interpolación usando resultados del 3a\n",
+      "y(1.25) ≈ 1.015\n",
+      "y(1.93) ≈ 1.1539\n",
+      "\n",
+      "Ejercicio 5c - Interpolación usando resultados del 3b\n",
+      "y(2.10) ≈ 1.6608\n",
+      "y(2.75) ≈ 3.5262\n",
+      "\n",
+      "Ejercicio 5d - Interpolación usando resultados del 3d\n",
+      "y(0.54) ≈ 0.2828\n",
+      "y(0.94) ≈ 0.8665\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función de interpolación lineal entre dos puntos\n",
+    "def interpolar(t1, y1, t2, y2, t_interp):\n",
+    "    return y1 + ((t_interp - t1) / (t2 - t1)) * (y2 - y1)\n",
+    "\n",
+    "print(\"Ejercicio 5a - Interpolación usando resultados del 3c\")\n",
+    "# Usamos resultados de 3c (y' = -(y+1)(y+3), y(0) = -2)\n",
+    "y_025 = interpolar(0.2, y3c[1], 0.4, y3c[2], 0.25)\n",
+    "y_093 = interpolar(0.8, y3c[5], 1.0, y3c[6], 0.93)\n",
+    "print(f\"y(0.25) ≈ {round(y_025, 4)}\")\n",
+    "print(f\"y(0.93) ≈ {round(y_093, 4)}\")\n",
+    "\n",
+    "print(\"\\nEjercicio 5b - Interpolación usando resultados del 3a\")\n",
+    "# Usamos resultados de 3a (y' = y/t - (y/t)^2)\n",
+    "y_125 = interpolar(1.2, y3a[2], 1.3, y3a[3], 1.25)\n",
+    "y_193 = interpolar(1.9, y3a[9], 2.0, y3a[10], 1.93)\n",
+    "print(f\"y(1.25) ≈ {round(y_125, 4)}\")\n",
+    "print(f\"y(1.93) ≈ {round(y_193, 4)}\")\n",
+    "\n",
+    "print(\"\\nEjercicio 5c - Interpolación usando resultados del 3b\")\n",
+    "# Usamos resultados de 3b\n",
+    "y_210 = interpolar(2.0, y3b[5], 2.2, y3b[6], 2.10)\n",
+    "y_275 = interpolar(2.6, y3b[8], 2.8, y3b[9], 2.75)\n",
+    "print(f\"y(2.10) ≈ {round(y_210, 4)}\")\n",
+    "print(f\"y(2.75) ≈ {round(y_275, 4)}\")\n",
+    "\n",
+    "print(\"\\nEjercicio 5d - Interpolación usando resultados del 3d\")\n",
+    "# Usamos resultados de 3d\n",
+    "y_054 = interpolar(0.5, y3d[5], 0.6, y3d[6], 0.54)\n",
+    "y_094 = interpolar(0.9, y3d[9], 1.0, y3d[10], 0.94)\n",
+    "print(f\"y(0.54) ≈ {round(y_054, 4)}\")\n",
+    "print(f\"y(0.94) ≈ {round(y_094, 4)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0d196dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejercicio 6a - Taylor orden 2\n",
+      "1.0,1.0\n",
+      "1.1,1.0\n",
+      "1.2,1.008\n",
+      "1.3,1.021\n",
+      "1.4,1.0375\n",
+      "1.5,1.0564\n",
+      "1.6,1.0769\n",
+      "1.7,1.0987\n",
+      "1.8,1.1213\n",
+      "1.9,1.1447\n",
+      "2.0,1.1685\n",
+      "\n",
+      "Ejercicio 6b - Taylor orden 2\n",
+      "1.0,0.0\n",
+      "1.2,0.2\n",
+      "1.4,0.4432\n",
+      "1.6,0.7363\n",
+      "1.8,1.0868\n",
+      "2.0,1.5042\n",
+      "2.2,2.0008\n",
+      "2.4,2.5926\n",
+      "2.6,3.3012\n",
+      "2.8,4.1561\n",
+      "3.0,5.1981\n",
+      "\n",
+      "Ejercicio 6c - Taylor orden 2\n",
+      "0.0,-2.0\n",
+      "0.2,-1.76\n",
+      "0.4,-1.5338\n",
+      "0.6,-1.346\n",
+      "0.8,-1.2086\n",
+      "1.0,-1.1189\n",
+      "1.2,-1.0652\n",
+      "1.4,-1.0349\n",
+      "1.6,-1.0185\n",
+      "1.8,-1.0097\n",
+      "2.0,-1.0051\n",
+      "\n",
+      "Ejercicio 6d - Taylor orden 2\n",
+      "0.0,0.3333\n",
+      "0.1,0.2183\n",
+      "0.2,0.1702\n",
+      "0.3,0.1714\n",
+      "0.4,0.2109\n",
+      "0.5,0.2818\n",
+      "0.6,0.3799\n",
+      "0.7,0.5024\n",
+      "0.8,0.6478\n",
+      "0.9,0.8149\n",
+      "1.0,1.003\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Método de Taylor de orden 2: y_{i+1} = y_i + h*f + (h²/2)*f'\n",
+    "def taylor2(t0, y0, h, t_final, f, dfdt):\n",
+    "    t_vals = [round(t0, 2)]\n",
+    "    y_vals = [round(y0, 4)]\n",
+    "    while t0 < t_final:\n",
+    "        y0 = y0 + h*f(t0, y0) + (h**2 / 2) * dfdt(t0, y0)\n",
+    "        t0 = round(t0 + h, 2)\n",
+    "        t_vals.append(t0)\n",
+    "        y_vals.append(round(y0, 4))\n",
+    "    return t_vals, y_vals\n",
+    "\n",
+    "# Ejercicio 6a\n",
+    "print(\"Ejercicio 6a - Taylor orden 2\")\n",
+    "f6a = lambda t, y: y/t - (y/t)**2\n",
+    "df6a = lambda t, y: (y/t - (y/t)**2)*(1/t - 2*y/(t**2))\n",
+    "t6a, y6a = taylor2(1.0, 1.0, 0.1, 2.0, f6a, df6a)\n",
+    "for t, y in zip(t6a, y6a): print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 6b\n",
+    "print(\"\\nEjercicio 6b - Taylor orden 2\")\n",
+    "f6b = lambda t, y: 1 + y/t + (y/t)**2\n",
+    "df6b = lambda t, y: (y/t + (y/t)**2) * (1/t + 2*y/(t**2))\n",
+    "t6b, y6b = taylor2(1.0, 0.0, 0.2, 3.0, f6b, df6b)\n",
+    "for t, y in zip(t6b, y6b): print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 6c\n",
+    "print(\"\\nEjercicio 6c - Taylor orden 2\")\n",
+    "f6c = lambda t, y: -(y + 1)*(y + 3)\n",
+    "df6c = lambda t, y: -((y + 1)*(y + 3)) * (1 + 1)  # f'(t, y) = df/dy * dy/dt = f' = -2*(y+1)*(y+3)\n",
+    "t6c, y6c = taylor2(0.0, -2.0, 0.2, 2.0, f6c, df6c)\n",
+    "for t, y in zip(t6c, y6c): print(f\"{t},{y}\")\n",
+    "\n",
+    "# Ejercicio 6d\n",
+    "print(\"\\nEjercicio 6d - Taylor orden 2\")\n",
+    "f6d = lambda t, y: -5*y + 5*t**2 + 2*t\n",
+    "df6d = lambda t, y: -5*f6d(t, y) + 10*t + 2\n",
+    "t6d, y6d = taylor2(0.0, 1/3, 0.1, 1.0, f6d, df6d)\n",
+    "for t, y in zip(t6d, y6d): print(f\"{t},{y}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a80c818c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Comparación 7a (t,y_euler,y_taylor,error)\n",
+      "1.0,1.0,1.0,0.0\n",
+      "1.1,1.0,1.0,0.0\n",
+      "1.2,1.0083,1.008,0.0003\n",
+      "1.3,1.0217,1.021,0.0007\n",
+      "1.4,1.0385,1.0375,0.001\n",
+      "1.5,1.0577,1.0564,0.0013\n",
+      "1.6,1.0785,1.0769,0.0016\n",
+      "1.7,1.1004,1.0987,0.0017\n",
+      "1.8,1.1233,1.1213,0.002\n",
+      "1.9,1.1467,1.1447,0.002\n",
+      "2.0,1.1707,1.1685,0.0022\n",
+      "\n",
+      "📊 Comparación 7b (t,y_euler,y_taylor,error)\n",
+      "1.0,0.0,0.0,0.0\n",
+      "1.2,0.2,0.2,0.0\n",
+      "1.4,0.4389,0.4432,0.0043\n",
+      "1.6,0.7212,0.7363,0.0151\n",
+      "1.8,1.052,1.0868,0.0348\n",
+      "2.0,1.4373,1.5042,0.0669\n",
+      "2.2,1.8843,2.0008,0.1165\n",
+      "2.4,2.4023,2.5926,0.1903\n",
+      "2.6,3.0028,3.3012,0.2984\n",
+      "2.8,3.7006,4.1561,0.4555\n",
+      "3.0,4.5143,5.1981,0.6838\n",
+      "\n",
+      "📊 Comparación 7c (t,y_euler,y_taylor,error)\n",
+      "0.0,-2.0,-2.0,0.0\n",
+      "0.2,-1.8,-1.76,0.04\n",
+      "0.4,-1.608,-1.5338,0.0742\n",
+      "0.6,-1.4387,-1.346,0.0927\n",
+      "0.8,-1.3017,-1.2086,0.0931\n",
+      "1.0,-1.1993,-1.1189,0.0804\n",
+      "1.2,-1.1275,-1.0652,0.0623\n",
+      "1.4,-1.0797,-1.0349,0.0448\n",
+      "1.6,-1.0491,-1.0185,0.0306\n",
+      "1.8,-1.03,-1.0097,0.0203\n",
+      "2.0,-1.0182,-1.0051,0.0131\n",
+      "\n",
+      "📊 Comparación 7d (t,y_euler,y_taylor,error)\n",
+      "0.0,0.3333,0.3333,0.0\n",
+      "0.1,0.1667,0.2183,0.0516\n",
+      "0.2,0.1083,0.1702,0.0619\n",
+      "0.3,0.1142,0.1714,0.0572\n",
+      "0.4,0.1621,0.2109,0.0488\n",
+      "0.5,0.241,0.2818,0.0408\n",
+      "0.6,0.3455,0.3799,0.0344\n",
+      "0.7,0.4728,0.5024,0.0296\n",
+      "0.8,0.6214,0.6478,0.0264\n",
+      "0.9,0.7907,0.8149,0.0242\n",
+      "1.0,0.9803,1.003,0.0227\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función para comparar Euler y Taylor 2 en una tabla\n",
+    "def comparar_euler_taylor(f, dfdt, t0, y0, h, t_final, label):\n",
+    "    t_euler, y_euler = euler(f, t0, y0, h, t_final)\n",
+    "    t_taylor, y_taylor = taylor2(t0, y0, h, t_final, f, dfdt)\n",
+    "    print(f\"\\n📊 Comparación {label} (t,y_euler,y_taylor,error)\")\n",
+    "    for te, ye, yt in zip(t_euler, y_euler, y_taylor):\n",
+    "        error = abs(yt - ye)\n",
+    "        print(f\"{te},{ye},{yt},{round(error, 6)}\")\n",
+    "\n",
+    "# Ejercicio 7a\n",
+    "f7a = lambda t, y: y/t - (y/t)**2\n",
+    "df7a = lambda t, y: (y/t - (y/t)**2)*(1/t - 2*y/(t**2))\n",
+    "comparar_euler_taylor(f7a, df7a, 1.0, 1.0, 0.1, 2.0, \"7a\")\n",
+    "\n",
+    "# Ejercicio 7b\n",
+    "f7b = lambda t, y: 1 + y/t + (y/t)**2\n",
+    "df7b = lambda t, y: (y/t + (y/t)**2) * (1/t + 2*y/(t**2))\n",
+    "comparar_euler_taylor(f7b, df7b, 1.0, 0.0, 0.2, 3.0, \"7b\")\n",
+    "\n",
+    "# Ejercicio 7c\n",
+    "f7c = lambda t, y: -(y + 1)*(y + 3)\n",
+    "df7c = lambda t, y: -2 * (y + 1)*(y + 3)\n",
+    "comparar_euler_taylor(f7c, df7c, 0.0, -2.0, 0.2, 2.0, \"7c\")\n",
+    "\n",
+    "# Ejercicio 7d\n",
+    "f7d = lambda t, y: -5*y + 5*t**2 + 2*t\n",
+    "df7d = lambda t, y: -5*f7d(t, y) + 10*t + 2\n",
+    "comparar_euler_taylor(f7d, df7d, 0.0, 1/3, 0.1, 1.0, \"7d\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37db8f15",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -16,7 +576,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
